<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/coupon_f22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sixteen_dps"
        android:elevation="@dimen/eight_dps"
        app:cardCornerRadius="@dimen/eight_dps">

        <TextView
            style="@style/styleCouponCode"
            android:text="@string/coupon_f22labs" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:text="@string/min_one"
            android:textSize="@dimen/text_small" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/coupon_freedel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/sixteen_dps"
        android:elevation="@dimen/eight_dps"
        app:cardCornerRadius="@dimen/eight_dps">

        <TextView
            style="@style/styleCouponCode"
            android:text="@string/coupon_freedel" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:text="@string/min_two"
            android:textSize="@dimen/text_small" />

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btn_coupon_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/sixteen_dps"
        android:layout_marginTop="@dimen/eight_dps"
        android:layout_marginRight="@dimen/sixteen_dps"
        android:layout_marginBottom="@dimen/sixteen_dps"
        android:background="@drawable/button_style"
        android:text="@string/cancel_button" />

</LinearLayout>