<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/popup_width"
    android:layout_height="@dimen/popup_height"
    android:layout_gravity="center_horizontal"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:padding="@dimen/eight_dps">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sixteen_dps"
        android:text="@string/sort"
        android:textSize="24sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="@dimen/eight_dps"
        android:background="@android:color/darker_gray" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/eight_dps">

        <RadioButton
            android:id="@+id/radio_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/eight_dps"
            android:text="@string/radio_rating"
            android:textSize="@dimen/text_small" />

        <RadioButton
            android:id="@+id/radio_sort_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/eight_dps"
            android:text="@string/radio_sort_low"
            android:textSize="@dimen/text_small" />

        <RadioButton
            android:id="@+id/radio_sort_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/eight_dps"
            android:text="@string/radio_sort_high"
            android:textSize="@dimen/text_small" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/sixteen_dps"
            android:layout_marginTop="@dimen/eight_dps"
            android:layout_marginRight="@dimen/sixteen_dps"
            android:background="@drawable/button_style"
            android:text="@string/apply_button" />

        <Button
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/sixteen_dps"
            android:layout_marginTop="@dimen/eight_dps"
            android:layout_marginRight="@dimen/sixteen_dps"
            android:background="@drawable/button_style"
            android:text="@string/cancel_button" />

    </LinearLayout>

</LinearLayout>