<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.activity.CartActivity">
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical"
            android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/white"
            android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sixteen_dps"
                    android:layout_marginBottom="@dimen/eight_dps"
                    android:gravity="center"
                    android:text="@string/cart_heading"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_medium" />

                <View style="@style/styleLine" />
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/recyclerView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@android:color/darker_gray"/>
        </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:background="@android:color/white"
                    android:orientation="vertical"
                    android:paddingBottom="8dp">

                        <EditText
                            android:id="@+id/et_coupon"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:hint="@string/hint_edittext"
                            android:inputType="textCapCharacters"
                            android:paddingLeft="8dp"
                            android:paddingTop="16dp"
                            android:paddingBottom="16dp" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                                <Button
                                    android:id="@+id/btn_apply_coupon"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginRight="8dp"
                                    android:background="@color/colorPrimaryDark"
                                    android:padding="8dp"
                                    android:onClick="onApplyCouponClicked"
                                    android:text="@string/apply_coupon" />

                                <Button
                                    android:id="@+id/btn_view_coupon"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginLeft="8dp"
                                    android:onClick="onViewCouponClicked"
                                    android:background="@color/colorPrimaryDark"
                                    android:padding="8dp"
                                    android:text="@string/show_coupon" />

                        </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="vertical"
                    android:paddingBottom="16dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="8dp"
                            android:fontFamily="sans-serif-smallcaps"
                            android:gravity="center_vertical"
                            android:text="@string/bill_details"
                            android:textColor="@android:color/black"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <LinearLayout style="@style/styleCartLinearLayout">

                                <TextView
                                    style="@style/styleCartItem"
                                    android:text="@string/item_total" />

                                <TextView style="@style/styleCartRupeeSymbol" />

                                <TextView
                                    android:id="@+id/tv_cart_total"
                                    style="@style/styleTvPrice"
                                    android:textColor="@android:color/black"
                                    tools:text="@string/sample_food_price" />

                        </LinearLayout>

                        <LinearLayout style="@style/styleCartLinearLayout">

                                <TextView

                                    style="@style/styleCartItem"
                                    android:text="@string/charges" />

                                <TextView style="@style/styleCartRupeeSymbol" />

                                <TextView
                                    android:id="@+id/tv_cart_gst"
                                    style="@style/styleTvPrice"
                                    android:textColor="@android:color/black"
                                    tools:text="@string/sample_food_price" />

                        </LinearLayout>

                        <View style="@style/styleLine" />

                        <LinearLayout style="@style/styleCartLinearLayout">

                                <TextView
                                    style="@style/styleCartItem"
                                    android:text="@string/delivery" />

                                <TextView
                                    android:id="@+id/tv_cart_delivery"
                                    style="@style/styleTvPrice"
                                    android:textColor="@android:color/black"
                                    tools:text="@string/sample_food_price" />

                        </LinearLayout>

                        <LinearLayout style="@style/styleCartLinearLayout">

                                <TextView
                                    style="@style/styleCartItem"
                                    android:text="@string/discount" />

                                <TextView
                                    android:id="@+id/rupee_symbol"
                                    style="@style/styleCartRupeeSymbol" />

                                <TextView
                                    android:id="@+id/tv_cart_discount"
                                    style="@style/styleTvPrice"
                                    android:textColor="@android:color/black"
                                    tools:text="@string/sample_food_price" />

                        </LinearLayout>


                        <View style="@style/styleLine" />

                        <LinearLayout style="@style/styleCartLinearLayout"
                            android:paddingBottom="@dimen/twenty_dps">

                                <TextView
                                    style="@style/styleCartItem"
                                    android:text="@string/grand_total" />

                                <TextView style="@style/styleCartRupeeSymbol" />

                                <TextView
                                    android:id="@+id/tv_cart_grand_total"
                                    style="@style/styleTvPrice"
                                    android:textColor="@android:color/black"
                                    tools:text="@string/sample_food_price" />

                        </LinearLayout>

                </LinearLayout>






        </LinearLayout>
        </ScrollView>
</LinearLayout>
